fixed : [RTL][customizer][nimble top menu] broken in RTL mode => all items are in the same place. fixes #670

--- a/assets/czr/sek/css/_dev_control/_0_4_control_top_bar.css
+++ b/assets/czr/sek/css/_dev_control/_0_4_control_top_bar.css
@@ -123,6 +123,10 @@ body.nimble-top-bar-visible #nimble-top-bar {
   flex: 0 0 100%;
   max-width: 100%;
 }
+.rtl #nimble-top-bar .sek-nimble-doc {
+  left:10px;
+  right: auto;
+}
 #nimble-top-bar .sek-nimble-doc img {
   width: 30px;
   height: 30px;
